--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,8 +40,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
     implementation 'com.github.NitishGadangi:TypeWriter-TextView:v1.3'
-    implementation 'com.etebarian:meow-bottom-navigation:1.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.6.0"
     implementation 'com.github.irfaan008:IRBottomNavigationView:1.0.1'
     implementation 'com.etebarian:meow-bottom-navigation-java:1.2.0'
+    implementation 'androidx.security:security-crypto:1.1.0-alpha03'
+    implementation 'com.google.firebase:firebase-auth:20.0.4'
+    implementation 'com.google.android.gms:play-services-auth:19.2.0'
 }
