--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,5 +48,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:19.2.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
