--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,11 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        // Other configurations
+        manifestPlaceholders = [
+                'appAuthRedirectScheme': 'my-stressfree-app'
+        ]
     }
 
     buildTypes {
@@ -63,4 +68,8 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.2'
     implementation 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'net.openid:appauth:0.9.1'
+    implementation fileTree(dir: 'libs', include: ['*.aar'])
+    implementation files('libs/spotify-app-remote-release-0.7.2.aar')
 }
+
