--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.5.3'
     implementation 'androidx.navigation:navigation-ui:2.5.3'
     implementation 'com.google.firebase:firebase-storage:20.1.0'
+    implementation 'com.android.volley:volley:1.2.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
@@ -71,5 +72,8 @@ dependencies {
     implementation 'net.openid:appauth:0.9.1'
     implementation fileTree(dir: 'libs', include: ['*.aar'])
     implementation files('libs/spotify-app-remote-release-0.7.2.aar')
+    implementation 'com.google.android.exoplayer:exoplayer:2.16.1'
+    implementation 'com.github.TeamNewPipe:NewPipeExtractor:0.21.6'
+    implementation 'com.github.kotvertolet:youtube-jextractor:0.3.4'
 }
 
