--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.StressFreeApp"
         tools:targetApi="31">
+
+        <meta-data
+            android:name="com.linx.stress_free_app.YoutubeAPI.API_KEY"
+            android:value="AIzaSyDMFZK6EnTNAq7EmY67mCNIv3suBYX-124" />
+        <activity
+            android:name=".YoutubeAPI.AudioPlayerActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".ExercisePlayer.ExercisePlayerActivity3"
             android:exported="false">
@@ -81,10 +92,15 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="my-stressfree-app" android:host="callback" />
+
+                <data
+                    android:host="callback"
+                    android:scheme="my-stressfree-app" />
             </intent-filter>
+
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
