--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,5 +75,7 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer:2.16.1'
     implementation 'com.github.TeamNewPipe:NewPipeExtractor:0.21.6'
     implementation 'com.github.kotvertolet:youtube-jextractor:0.3.4'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 }
 
