--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,5 +77,7 @@ dependencies {
     implementation 'com.github.kotvertolet:youtube-jextractor:0.3.4'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    implementation 'com.firebaseui:firebase-ui-storage:7.2.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
 }
 
