--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
 
     defaultConfig {
         applicationId "com.linx.stress_free_app"
-        minSdk 21
+        minSdk 26
         targetSdk 32
         versionCode 1
         versionName "1.0"
@@ -85,5 +85,6 @@ dependencies {
     androidTestImplementation 'androidx.test:rules:1.5.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'androidx.work:work-runtime:2.7.1'
+    implementation 'com.github.gabriel-TheCode:AestheticDialogs:1.3.6'
 }
 
