--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ plugins {
 
 android {
     namespace 'com.linx.stress_free_app'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.linx.stress_free_app"
         minSdk 26
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -86,5 +86,7 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'androidx.work:work-runtime:2.7.1'
     implementation 'com.github.gabriel-TheCode:AestheticDialogs:1.3.6'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
 }
 
